--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 streamlit
-ultralytics
-opencv-python-headless
-pillow
-torch
+ultralytics==8.2.50
+opencv-python-headless==4.8.0.76
+Pillow
+torch==2.2.0+cpu
+torchvision==0.17.0+cpu
+torchaudio==2.2.0+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
+numpy
