--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit
-ultralytics==8.2.50
-opencv-python-headless==4.8.0.76
+streamlit==1.32.0
+ultralytics==8.2.37
+opencv-python-headless==4.9.0.80
 Pillow
-torch==2.2.0+cpu
-torchvision==0.17.0+cpu
-torchaudio==2.2.0+cpu
--f https://download.pytorch.org/whl/torch_stable.html
+torch==2.5.1
+torchvision==0.20.1
+torchaudio==2.5.1
 numpy
